Update EDA notebook and Streamlit app with data preprocessing and visualizations

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -12,36 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: plotly-express in ./venv/lib/python3.12/site-packages (0.4.1)\n",
-      "Requirement already satisfied: pandas>=0.20.0 in ./venv/lib/python3.12/site-packages (from plotly-express) (2.2.2)\n",
-      "Requirement already satisfied: plotly>=4.1.0 in ./venv/lib/python3.12/site-packages (from plotly-express) (5.22.0)\n",
-      "Requirement already satisfied: statsmodels>=0.9.0 in ./venv/lib/python3.12/site-packages (from plotly-express) (0.14.2)\n",
-      "Requirement already satisfied: scipy>=0.18 in ./venv/lib/python3.12/site-packages (from plotly-express) (1.13.0)\n",
-      "Requirement already satisfied: patsy>=0.5 in ./venv/lib/python3.12/site-packages (from plotly-express) (0.5.6)\n",
-      "Requirement already satisfied: numpy>=1.11 in ./venv/lib/python3.12/site-packages (from plotly-express) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./venv/lib/python3.12/site-packages (from pandas>=0.20.0->plotly-express) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in ./venv/lib/python3.12/site-packages (from pandas>=0.20.0->plotly-express) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in ./venv/lib/python3.12/site-packages (from pandas>=0.20.0->plotly-express) (2024.1)\n",
-      "Requirement already satisfied: six in ./venv/lib/python3.12/site-packages (from patsy>=0.5->plotly-express) (1.16.0)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in ./venv/lib/python3.12/site-packages (from plotly>=4.1.0->plotly-express) (8.3.0)\n",
-      "Requirement already satisfied: packaging in ./venv/lib/python3.12/site-packages (from plotly>=4.1.0->plotly-express) (24.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install plotly-express\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +180,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load the dataset\n",
-    "df = pd.read_csv('./vehicles_us.csv')\n",
+    "df = pd.read_csv('vehicles_us.csv')\n",
     "\n",
     "# Fill missing values\n",
     "df['model_year'] = df.groupby('model')['model_year'].transform(lambda x: x.fillna(x.median()))\n",
@@ -221,12 +192,13 @@
     "df = df[(df['model_year'] >= 1990) & (df['model_year'] <= 2022)]  # Example model year range\n",
     "\n",
     "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +272,7 @@
     "plt.xlabel('Model Year')\n",
     "plt.ylabel('Price')\n",
     "plt.show()\n",
+    "\n",
     "\n"
    ]
   },
